--- a/retrieve_movie_data.ipynb
+++ b/retrieve_movie_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,8 @@
     "from dotenv import load_dotenv\n",
     "import os\n",
     "import pandas as pd\n",
-    "import json"
+    "import json\n",
+    "pd.set_option('display.max_columns', 30)"
    ]
   },
   {
@@ -2700,6 +2701,7 @@
     "        \n",
     "        # Make a request for a the full movie details\n",
     "        for id in movie_id:\n",
+    "            \n",
     "            # Execute \"GET\" request with url\n",
     "            query_url_3 = f\"{url3}{id}?api_key={tmdb_api_key}\"\n",
     "            movie_response_all = requests.get(query_url_3).json()\n",
@@ -3364,7 +3366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3398,7 +3400,17 @@
        "      <th>runtime</th>\n",
        "      <th>revenue</th>\n",
        "      <th>release_date</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>spoken_languages</th>\n",
+       "      <th>production_countries</th>\n",
        "      <th>...</th>\n",
+       "      <th>snippet</th>\n",
+       "      <th>source</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>pub_date</th>\n",
+       "      <th>word_count</th>\n",
        "      <th>headline.main</th>\n",
        "      <th>headline.kicker</th>\n",
        "      <th>headline.content_kicker</th>\n",
@@ -3424,7 +3436,17 @@
        "      <td>102</td>\n",
        "      <td>0</td>\n",
        "      <td>2021-10-07</td>\n",
+       "      <td>4.000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Drama, Mystery, Thriller, Horror</td>\n",
+       "      <td>Spanish</td>\n",
+       "      <td>Argentina</td>\n",
        "      <td>...</td>\n",
+       "      <td>A gynecologist and her patient form a horrifyi...</td>\n",
+       "      <td>The New York Times</td>\n",
+       "      <td>subject: Movies;creative_works: The Attachment...</td>\n",
+       "      <td>2023-05-25T11:00:03+0000</td>\n",
+       "      <td>295</td>\n",
        "      <td>‘The Attachment Diaries’ Review: Love, Sick</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -3448,7 +3470,17 @@
        "      <td>96</td>\n",
        "      <td>0</td>\n",
        "      <td>2022-06-11</td>\n",
+       "      <td>7.263</td>\n",
+       "      <td>38</td>\n",
+       "      <td>Drama, Romance</td>\n",
+       "      <td>French, English</td>\n",
+       "      <td>Canada</td>\n",
        "      <td>...</td>\n",
+       "      <td>Religion comes between two girls falling in lo...</td>\n",
+       "      <td>The New York Times</td>\n",
+       "      <td>subject: Movies;creative_works: You Can Live F...</td>\n",
+       "      <td>2023-05-04T11:00:08+0000</td>\n",
+       "      <td>294</td>\n",
        "      <td>‘You Can Live Forever’ Review: Do You Love Me ...</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -3472,7 +3504,17 @@
        "      <td>100</td>\n",
        "      <td>37820</td>\n",
        "      <td>2023-04-07</td>\n",
+       "      <td>6.761</td>\n",
+       "      <td>47</td>\n",
+       "      <td>Romance, Drama, Comedy</td>\n",
+       "      <td>English</td>\n",
+       "      <td>Germany, United States of America</td>\n",
        "      <td>...</td>\n",
+       "      <td>A film adaptation of Taylor Jenkins Reid’s nov...</td>\n",
+       "      <td>The New York Times</td>\n",
+       "      <td>subject: Movies;persons: Bracey, Luke (1989- )...</td>\n",
+       "      <td>2023-04-13T11:00:06+0000</td>\n",
+       "      <td>320</td>\n",
        "      <td>‘One True Loves’ Review: A Romance Lost at Sea</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -3496,7 +3538,17 @@
        "      <td>95</td>\n",
        "      <td>0</td>\n",
        "      <td>2023-04-13</td>\n",
+       "      <td>6.000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Documentary</td>\n",
+       "      <td>English</td>\n",
+       "      <td>United States of America</td>\n",
        "      <td>...</td>\n",
+       "      <td>There’s not much Lennon music heard in this do...</td>\n",
+       "      <td>The New York Times</td>\n",
+       "      <td>subject: Documentary Films and Programs;creati...</td>\n",
+       "      <td>2023-04-13T11:00:03+0000</td>\n",
+       "      <td>327</td>\n",
        "      <td>‘The Lost Weekend: A Love Story’ Review: When ...</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -3520,7 +3572,17 @@
        "      <td>116</td>\n",
        "      <td>0</td>\n",
        "      <td>2023-03-31</td>\n",
+       "      <td>7.020</td>\n",
+       "      <td>49</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>English</td>\n",
+       "      <td>United States of America</td>\n",
        "      <td>...</td>\n",
+       "      <td>A mesmerizing Teyana Taylor stars in A.V. Rock...</td>\n",
+       "      <td>The New York Times</td>\n",
+       "      <td>subject: Movies;creative_works: A Thousand and...</td>\n",
+       "      <td>2023-03-30T18:53:42+0000</td>\n",
+       "      <td>971</td>\n",
        "      <td>‘A Thousand and One’ Review: A New York Love S...</td>\n",
        "      <td>Critic’s Pick</td>\n",
        "      <td>None</td>\n",
@@ -3559,19 +3621,54 @@
        "3  May Pang lovingly recounts her life in rock & ...       2.899       95   \n",
        "4  Struggling but unapologetically living on her ...      16.664      116   \n",
        "\n",
-       "   revenue release_date  ...  \\\n",
-       "0        0   2021-10-07  ...   \n",
-       "1        0   2022-06-11  ...   \n",
-       "2    37820   2023-04-07  ...   \n",
-       "3        0   2023-04-13  ...   \n",
-       "4        0   2023-03-31  ...   \n",
+       "   revenue release_date  vote_average  vote_count  \\\n",
+       "0        0   2021-10-07         4.000           2   \n",
+       "1        0   2022-06-11         7.263          38   \n",
+       "2    37820   2023-04-07         6.761          47   \n",
+       "3        0   2023-04-13         6.000           2   \n",
+       "4        0   2023-03-31         7.020          49   \n",
        "\n",
-       "                                       headline.main  headline.kicker  \\\n",
-       "0        ‘The Attachment Diaries’ Review: Love, Sick             None   \n",
-       "1  ‘You Can Live Forever’ Review: Do You Love Me ...             None   \n",
-       "2     ‘One True Loves’ Review: A Romance Lost at Sea             None   \n",
-       "3  ‘The Lost Weekend: A Love Story’ Review: When ...             None   \n",
-       "4  ‘A Thousand and One’ Review: A New York Love S...    Critic’s Pick   \n",
+       "                             genres spoken_languages  \\\n",
+       "0  Drama, Mystery, Thriller, Horror          Spanish   \n",
+       "1                    Drama, Romance  French, English   \n",
+       "2            Romance, Drama, Comedy          English   \n",
+       "3                       Documentary          English   \n",
+       "4                             Drama          English   \n",
+       "\n",
+       "                production_countries  ...  \\\n",
+       "0                          Argentina  ...   \n",
+       "1                             Canada  ...   \n",
+       "2  Germany, United States of America  ...   \n",
+       "3           United States of America  ...   \n",
+       "4           United States of America  ...   \n",
+       "\n",
+       "                                             snippet              source  \\\n",
+       "0  A gynecologist and her patient form a horrifyi...  The New York Times   \n",
+       "1  Religion comes between two girls falling in lo...  The New York Times   \n",
+       "2  A film adaptation of Taylor Jenkins Reid’s nov...  The New York Times   \n",
+       "3  There’s not much Lennon music heard in this do...  The New York Times   \n",
+       "4  A mesmerizing Teyana Taylor stars in A.V. Rock...  The New York Times   \n",
+       "\n",
+       "                                            keywords  \\\n",
+       "0  subject: Movies;creative_works: The Attachment...   \n",
+       "1  subject: Movies;creative_works: You Can Live F...   \n",
+       "2  subject: Movies;persons: Bracey, Luke (1989- )...   \n",
+       "3  subject: Documentary Films and Programs;creati...   \n",
+       "4  subject: Movies;creative_works: A Thousand and...   \n",
+       "\n",
+       "                   pub_date word_count  \\\n",
+       "0  2023-05-25T11:00:03+0000        295   \n",
+       "1  2023-05-04T11:00:08+0000        294   \n",
+       "2  2023-04-13T11:00:06+0000        320   \n",
+       "3  2023-04-13T11:00:03+0000        327   \n",
+       "4  2023-03-30T18:53:42+0000        971   \n",
+       "\n",
+       "                                       headline.main headline.kicker  \\\n",
+       "0        ‘The Attachment Diaries’ Review: Love, Sick            None   \n",
+       "1  ‘You Can Live Forever’ Review: Do You Love Me ...            None   \n",
+       "2     ‘One True Loves’ Review: A Romance Lost at Sea            None   \n",
+       "3  ‘The Lost Weekend: A Love Story’ Review: When ...            None   \n",
+       "4  ‘A Thousand and One’ Review: A New York Love S...   Critic’s Pick   \n",
        "\n",
        "  headline.content_kicker                  headline.print_headline  \\\n",
        "0                    None                   The Attachment Diaries   \n",
@@ -3597,7 +3694,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3731,7 +3828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3765,7 +3862,16 @@
        "      <th>runtime</th>\n",
        "      <th>revenue</th>\n",
        "      <th>release_date</th>\n",
-       "      <th>...</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>spoken_languages</th>\n",
+       "      <th>production_countries</th>\n",
+       "      <th>web_url</th>\n",
+       "      <th>snippet</th>\n",
+       "      <th>source</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>pub_date</th>\n",
        "      <th>word_count</th>\n",
        "      <th>headline.main</th>\n",
        "      <th>headline.kicker</th>\n",
@@ -3791,7 +3897,16 @@
        "      <td>102</td>\n",
        "      <td>0</td>\n",
        "      <td>2021-10-07</td>\n",
-       "      <td>...</td>\n",
+       "      <td>4.000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Drama, Mystery, Thriller, Horror</td>\n",
+       "      <td>Spanish</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>https://www.nytimes.com/2023/05/25/movies/the-...</td>\n",
+       "      <td>A gynecologist and her patient form a horrifyi...</td>\n",
+       "      <td>The New York Times</td>\n",
+       "      <td>subject: Movies;creative_works: The Attachment...</td>\n",
+       "      <td>2023-05-25T11:00:03+0000</td>\n",
        "      <td>295</td>\n",
        "      <td>‘The Attachment Diaries’ Review: Love, Sick</td>\n",
        "      <td>None</td>\n",
@@ -3815,7 +3930,16 @@
        "      <td>96</td>\n",
        "      <td>0</td>\n",
        "      <td>2022-06-11</td>\n",
-       "      <td>...</td>\n",
+       "      <td>7.263</td>\n",
+       "      <td>38</td>\n",
+       "      <td>Drama, Romance</td>\n",
+       "      <td>French, English</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>https://www.nytimes.com/2023/05/04/movies/you-...</td>\n",
+       "      <td>Religion comes between two girls falling in lo...</td>\n",
+       "      <td>The New York Times</td>\n",
+       "      <td>subject: Movies;creative_works: You Can Live F...</td>\n",
+       "      <td>2023-05-04T11:00:08+0000</td>\n",
        "      <td>294</td>\n",
        "      <td>‘You Can Live Forever’ Review: Do You Love Me ...</td>\n",
        "      <td>None</td>\n",
@@ -3839,7 +3963,16 @@
        "      <td>100</td>\n",
        "      <td>37820</td>\n",
        "      <td>2023-04-07</td>\n",
-       "      <td>...</td>\n",
+       "      <td>6.761</td>\n",
+       "      <td>47</td>\n",
+       "      <td>Romance, Drama, Comedy</td>\n",
+       "      <td>English</td>\n",
+       "      <td>Germany, United States of America</td>\n",
+       "      <td>https://www.nytimes.com/2023/04/13/movies/one-...</td>\n",
+       "      <td>A film adaptation of Taylor Jenkins Reid’s nov...</td>\n",
+       "      <td>The New York Times</td>\n",
+       "      <td>subject: Movies;persons: Bracey, Luke (1989- )...</td>\n",
+       "      <td>2023-04-13T11:00:06+0000</td>\n",
        "      <td>320</td>\n",
        "      <td>‘One True Loves’ Review: A Romance Lost at Sea</td>\n",
        "      <td>None</td>\n",
@@ -3863,7 +3996,16 @@
        "      <td>95</td>\n",
        "      <td>0</td>\n",
        "      <td>2023-04-13</td>\n",
-       "      <td>...</td>\n",
+       "      <td>6.000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Documentary</td>\n",
+       "      <td>English</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>https://www.nytimes.com/2023/04/13/movies/the-...</td>\n",
+       "      <td>There’s not much Lennon music heard in this do...</td>\n",
+       "      <td>The New York Times</td>\n",
+       "      <td>subject: Documentary Films and Programs;creati...</td>\n",
+       "      <td>2023-04-13T11:00:03+0000</td>\n",
        "      <td>327</td>\n",
        "      <td>‘The Lost Weekend: A Love Story’ Review: When ...</td>\n",
        "      <td>None</td>\n",
@@ -3887,7 +4029,16 @@
        "      <td>116</td>\n",
        "      <td>0</td>\n",
        "      <td>2023-03-31</td>\n",
-       "      <td>...</td>\n",
+       "      <td>7.020</td>\n",
+       "      <td>49</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>English</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>https://www.nytimes.com/2023/03/30/movies/a-th...</td>\n",
+       "      <td>A mesmerizing Teyana Taylor stars in A.V. Rock...</td>\n",
+       "      <td>The New York Times</td>\n",
+       "      <td>subject: Movies;creative_works: A Thousand and...</td>\n",
+       "      <td>2023-03-30T18:53:42+0000</td>\n",
        "      <td>971</td>\n",
        "      <td>‘A Thousand and One’ Review: A New York Love S...</td>\n",
        "      <td>Critic’s Pick</td>\n",
@@ -3901,7 +4052,6 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 30 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -3926,12 +4076,54 @@
        "3  May Pang lovingly recounts her life in rock & ...       2.899       95   \n",
        "4  Struggling but unapologetically living on her ...      16.664      116   \n",
        "\n",
-       "   revenue release_date  ...  word_count  \\\n",
-       "0        0   2021-10-07  ...         295   \n",
-       "1        0   2022-06-11  ...         294   \n",
-       "2    37820   2023-04-07  ...         320   \n",
-       "3        0   2023-04-13  ...         327   \n",
-       "4        0   2023-03-31  ...         971   \n",
+       "   revenue release_date  vote_average  vote_count  \\\n",
+       "0        0   2021-10-07         4.000           2   \n",
+       "1        0   2022-06-11         7.263          38   \n",
+       "2    37820   2023-04-07         6.761          47   \n",
+       "3        0   2023-04-13         6.000           2   \n",
+       "4        0   2023-03-31         7.020          49   \n",
+       "\n",
+       "                             genres spoken_languages  \\\n",
+       "0  Drama, Mystery, Thriller, Horror          Spanish   \n",
+       "1                    Drama, Romance  French, English   \n",
+       "2            Romance, Drama, Comedy          English   \n",
+       "3                       Documentary          English   \n",
+       "4                             Drama          English   \n",
+       "\n",
+       "                production_countries  \\\n",
+       "0                          Argentina   \n",
+       "1                             Canada   \n",
+       "2  Germany, United States of America   \n",
+       "3           United States of America   \n",
+       "4           United States of America   \n",
+       "\n",
+       "                                             web_url  \\\n",
+       "0  https://www.nytimes.com/2023/05/25/movies/the-...   \n",
+       "1  https://www.nytimes.com/2023/05/04/movies/you-...   \n",
+       "2  https://www.nytimes.com/2023/04/13/movies/one-...   \n",
+       "3  https://www.nytimes.com/2023/04/13/movies/the-...   \n",
+       "4  https://www.nytimes.com/2023/03/30/movies/a-th...   \n",
+       "\n",
+       "                                             snippet              source  \\\n",
+       "0  A gynecologist and her patient form a horrifyi...  The New York Times   \n",
+       "1  Religion comes between two girls falling in lo...  The New York Times   \n",
+       "2  A film adaptation of Taylor Jenkins Reid’s nov...  The New York Times   \n",
+       "3  There’s not much Lennon music heard in this do...  The New York Times   \n",
+       "4  A mesmerizing Teyana Taylor stars in A.V. Rock...  The New York Times   \n",
+       "\n",
+       "                                            keywords  \\\n",
+       "0  subject: Movies;creative_works: The Attachment...   \n",
+       "1  subject: Movies;creative_works: You Can Live F...   \n",
+       "2  subject: Movies;persons: Bracey, Luke (1989- )...   \n",
+       "3  subject: Documentary Films and Programs;creati...   \n",
+       "4  subject: Movies;creative_works: A Thousand and...   \n",
+       "\n",
+       "                   pub_date  word_count  \\\n",
+       "0  2023-05-25T11:00:03+0000         295   \n",
+       "1  2023-05-04T11:00:08+0000         294   \n",
+       "2  2023-04-13T11:00:06+0000         320   \n",
+       "3  2023-04-13T11:00:03+0000         327   \n",
+       "4  2023-03-30T18:53:42+0000         971   \n",
        "\n",
        "                                       headline.main headline.kicker  \\\n",
        "0        ‘The Attachment Diaries’ Review: Love, Sick            None   \n",
@@ -3959,12 +4151,10 @@
        "1                None  \n",
        "2                None  \n",
        "3                None  \n",
-       "4                None  \n",
-       "\n",
-       "[5 rows x 30 columns]"
+       "4                None  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
